# cant-take-the-sky

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-exe.yml  unit-tests.yml
assets/fonts/corabael/: readme.html
assets/heroes/: source.txt
assets/heroes/derrial_book/: character.json
assets/heroes/hoban_washburne/: character.json
assets/heroes/inara_serra/: character.json
assets/heroes/jayne_cobb/: character.json
assets/heroes/kaylee_frye/: character.json
assets/heroes/malcolm_reynolds/: character.json
assets/heroes/river_tam/: character.json
assets/heroes/simon_tam/: character.json
assets/heroes/zoe_washburne/: character.json
assets/images/menu_serenity/: source.txt
src/app/: main.py
src/app/etc/: utils.py
src/app/models/: hero.py  serenity.py  ship_component.py
src/app/screens/: about_page.py  base_scene.py  main_menu.py  scene_manager.py
src/test/unit/: test_hero.py
